[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talp-multiagent-analyzer"
version = "0.1.0"
description = "Deterministic quantitative analyzer for TALP Multi-Agent outputs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0,<3.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
